--- a/MIS442Store/Web.config
+++ b/MIS442Store/Web.config
@@ -8,9 +8,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-MIS442Store-20170420054827.mdf;Initial Catalog=aspnet-MIS442Store-20170420054827;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="DB_MIS442" connectionString="Server=turnsol.arvixe.com;Database=MIS442; User Id=mis442;Password=mis442;" />
+  <connectionStrings configSource="MyDatabase.config">
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -27,6 +25,12 @@
     </httpModules>
   </system.web>
   <system.webServer>
+    <httpErrors errorMode="Detailed" existingResponse="Auto">
+      <remove statusCode="404" subStatusCode="-1" />
+      <error statusCode="404"     prefixLanguageFilePath="" path="/Error/NotFound"     responseMode="ExecuteURL" />
+      <remove statusCode="500" />
+      <error statusCode="500"     prefixLanguageFilePath="" path="/Error/ServerError" responseMode="ExecuteURL" />
+    </httpErrors>
     <modules>
       <remove name="FormsAuthentication" />
       <remove name="ApplicationInsightsWebTracking" />
@@ -79,11 +83,7 @@
     </assemblyBinding>
   </runtime>
   <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
-      <parameters>
-        <parameter value="mssqllocaldb" />
-      </parameters>
-    </defaultConnectionFactory>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
